# reproducibility-study-ixp-spoofing

./: CMakeLists.txt  README.md  main.cpp
customer_cone/: as.hpp  byte_addr.hpp  classification_type.hpp  cone.hpp  ipv4_address.hpp  ipv4_prefix.hpp  ipv4_subnet_mask.hpp  sample.hpp  stats.hpp  trie.hpp
customer_cone/client/: checker.hpp  client.hpp  file_processor.hpp  stats_processor.hpp  writer.hpp
customer_cone/server/: server.hpp
customer_cone/sflow/: encoder.hpp  reader.hpp  sflow.h  sflow_data.hpp  sflow_v2v4.h
customer_cone/utils/: compare.hpp  filesystem.hpp  string.hpp  time.hpp
data/: mac_mapping.txt
patch/: fixes-possible-memory-leaks.diff
src/: as.cpp  byte_addr.cpp  cone.cpp  ipv4_prefix.cpp  ipv4_subnet_mask.cpp  sample.cpp  trie.cpp
src/client/: checker.cpp  client.cpp  file_processor.cpp  stats_processor.cpp  writer.cpp
src/server/: server.cpp
src/sflow/: encoder.cpp  reader.cpp
src/utils/: filesystem.cpp  string.cpp
test/: cone_test.cpp  run_test.cpp  trie_test.cpp
